Archive2/9d/fe1cb890911414/output
main.cpp:13:15: error: variable or field 'function' declared void
 void function(Thing thing)
               ^
main.cpp:13:21: error: expected ')' before 'thing'
 void function(Thing thing)
                     ^
